Refactor pom.xml to remove unused dependencies and update application.properties for JPA configuration. Enhance JwtAuthenticationFilter to handle token validation and error responses with localized messages. Introduce AuthUtil for user context retrieval and update UserRequest, UserResponse, and UserEntity to include locale handling. Add validation for locale in messages properties.